# SummonGPT

./: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
src/: App.tsx  et-book.css  index.css  index.tsx  openai.ts  storage.ts  tauri.ts  types.ts  utils.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  state.rs  tray.rs
src/components/: Avatar.tsx  Bobble.tsx  Header.tsx  History.tsx  ShortcutInput.tsx  ShortcutSetter.tsx  TextInput.tsx  UserInput.tsx
src/routes/: home.tsx  openai.tsx  shortcut.tsx  test-shortcut.tsx
