[package]
name = "summongpt"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["global-shortcut-all", "macos-private-api", "shell-all", "system-tray", "window-center", "window-hide", "window-minimize", "window-set-always-on-top", "window-set-focus", "window-show", "window-unminimize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
auto-launch = "0.4.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
