[package]
name = "summongpt"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["clipboard-write-text", "dialog-open", "dialog-save", "fs-copy-file", "fs-create-dir", "fs-read-dir", "fs-read-file", "fs-remove-file", "fs-write-file", "global-shortcut-all", "macos-private-api", "path-all", "protocol-asset", "system-tray", "window-center", "window-hide", "window-minimize", "window-set-always-on-top", "window-set-focus", "window-show", "window-unminimize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
auto-launch = "0.4.0"
async-openai = "0.9.4"
futures = "0.3.17"
tokio = "1.26.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
